deps/groove/groove/groove.h


enum GrooveFillMode {
    GrooveFillModeAnySinkFull,
    GrooveFillModeEverySinkFull,
};
#define GROOVE_BUFFER_NO  0
#define GROOVE_BUFFER_YES 1
#define GROOVE_BUFFER_END 2
struct Groove;
struct GrooveAudioFormat {
    int sample_rate;
    struct SoundIoChannelLayout layout;
    enum SoundIoFormat format;
    int is_planar;
};
struct GrooveFile {
    int dirty;
    const char *filename;
    double override_duration;
};
struct GrooveCustomIo {
    void *userdata;
    int (*read_packet)(struct GrooveCustomIo *, uint8_t *buf, int buf_size);
    int (*write_packet)(struct GrooveCustomIo *, uint8_t *buf, int buf_size);
    int64_t (*seek)(struct GrooveCustomIo *, int64_t offset, int whence);
};
struct GrooveTag;
struct GroovePlaylistItem {
    struct GrooveFile *file;
    double gain;
    double peak;
    struct GroovePlaylistItem *prev;
    struct GroovePlaylistItem *next;
};
struct GroovePlaylist {
    struct GroovePlaylistItem *head;
    struct GroovePlaylistItem *tail;
    double gain;
};
struct GrooveBuffer {
    uint8_t **data;
    struct GrooveAudioFormat format;
    int frame_count;
    struct GroovePlaylistItem *item;
    double pos;
    int size;
    uint64_t pts;
};
GROOVE_EXPORT int groove_create(struct Groove **groove);
GROOVE_EXPORT void groove_set_logging(int level);
GROOVE_EXPORT const char *groove_version(void);
GROOVE_EXPORT struct GrooveFile *groove_file_create(struct Groove *);
GROOVE_EXPORT void groove_file_destroy(struct GrooveFile *file);
GROOVE_EXPORT int groove_file_open(struct GrooveFile *file,
        const char *filename, const char *filename_hint);
GROOVE_EXPORT int groove_file_open_custom(struct GrooveFile *file,
        struct GrooveCustomIo *custom_io, const char *filename_hint);
GROOVE_EXPORT void groove_file_close(struct GrooveFile *file);
GROOVE_EXPORT struct GrooveTag *groove_file_metadata_get(struct GrooveFile *file,
        const char *key, const struct GrooveTag *prev, int flags);
GROOVE_EXPORT int groove_file_metadata_set(struct GrooveFile *file, const char *key,
        const char *value, int flags);
GROOVE_EXPORT const char *groove_file_short_names(struct GrooveFile *file);
GROOVE_EXPORT int groove_file_save(struct GrooveFile *file);
GROOVE_EXPORT int groove_file_save_as(struct GrooveFile *file, const char *filename);
GROOVE_EXPORT double groove_file_duration(struct GrooveFile *file);
GROOVE_EXPORT void groove_file_audio_format(struct GrooveFile *file,
        struct GrooveAudioFormat *audio_format);
GROOVE_EXPORT struct GroovePlaylist *groove_playlist_create(struct Groove *);
GROOVE_EXPORT void groove_playlist_destroy(struct GroovePlaylist *playlist);
GROOVE_EXPORT void groove_playlist_play(struct GroovePlaylist *playlist);
GROOVE_EXPORT void groove_playlist_pause(struct GroovePlaylist *playlist);
GROOVE_EXPORT void groove_playlist_seek(struct GroovePlaylist *playlist,
        struct GroovePlaylistItem *item, double seconds);
GROOVE_EXPORT struct GroovePlaylistItem *groove_playlist_insert(
        struct GroovePlaylist *playlist, struct GrooveFile *file,
        double gain, double peak,
        struct GroovePlaylistItem *next);
GROOVE_EXPORT void groove_playlist_remove(struct GroovePlaylist *playlist,
        struct GroovePlaylistItem *item);
GROOVE_EXPORT void groove_playlist_position(struct GroovePlaylist *playlist,
        struct GroovePlaylistItem **item, double *seconds);
GROOVE_EXPORT int groove_playlist_playing(struct GroovePlaylist *playlist);
GROOVE_EXPORT void groove_playlist_clear(struct GroovePlaylist *playlist);
GROOVE_EXPORT int groove_playlist_count(struct GroovePlaylist *playlist);
GROOVE_EXPORT void groove_playlist_set_gain(struct GroovePlaylist *playlist, double gain);
GROOVE_EXPORT void groove_playlist_set_item_gain_peak(
        struct GroovePlaylist *playlist, struct GroovePlaylistItem *item,
        double gain, double peak);
GROOVE_EXPORT void groove_playlist_set_fill_mode(struct GroovePlaylist *playlist,
        enum GrooveFillMode mode);