deps/groove/groove/encoder.h


struct GrooveEncoder {
    struct GrooveAudioFormat target_audio_format;
    int bit_rate;
    const char *format_short_name;
    const char *codec_short_name;
    const char *filename;
    const char *mime_type;
    int sink_buffer_size_bytes;
    int encoded_buffer_size;
    double gain;
    struct GroovePlaylist *playlist;
    struct GrooveAudioFormat actual_audio_format;
};
GROOVE_EXPORT struct GrooveEncoder *groove_encoder_create(struct Groove *);
GROOVE_EXPORT void groove_encoder_destroy(struct GrooveEncoder *encoder);
GROOVE_EXPORT int groove_encoder_attach(struct GrooveEncoder *encoder,
        struct GroovePlaylist *playlist);
GROOVE_EXPORT int groove_encoder_detach(struct GrooveEncoder *encoder);
GROOVE_EXPORT int groove_encoder_buffer_get(struct GrooveEncoder *encoder,
        struct GrooveBuffer **buffer, int block);
GROOVE_EXPORT int groove_encoder_buffer_peek(struct GrooveEncoder *encoder, int block);
GROOVE_EXPORT struct GrooveTag *groove_encoder_metadata_get(struct GrooveEncoder *encoder,
        const char *key, const struct GrooveTag *prev, int flags);
GROOVE_EXPORT int groove_encoder_metadata_set(struct GrooveEncoder *encoder, const char *key,
        const char *value, int flags);
GROOVE_EXPORT void groove_encoder_position(struct GrooveEncoder *encoder,
        struct GroovePlaylistItem **item, double *seconds);
GROOVE_EXPORT int groove_encoder_set_gain(struct GrooveEncoder *encoder, double gain);